<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Book genre array -->
    <string name="action_and_adventure" tools:ignore="MissingTranslation">Action &amp; Adventure</string>
    <string name="autobiography" tools:ignore="MissingTranslation">Autobiography</string>
    <string name="biography" tools:ignore="MissingTranslation">Biography</string>
    <string name="classic" tools:ignore="MissingTranslation">Classic</string>
    <string name="comic_book" tools:ignore="MissingTranslation">Comic Book</string>
    <string name="cookbook" tools:ignore="MissingTranslation">Cookbook</string>
    <string name="crime_fiction" tools:ignore="MissingTranslation">Crime Fiction</string>
    <string name="detective_and_mystery" tools:ignore="MissingTranslation">Detective &amp; Mystery</string>
    <string name="essay" tools:ignore="MissingTranslation">Essay</string>
    <string name="fantasy" tools:ignore="MissingTranslation">Fantasy</string>
    <string name="graphic_novel" tools:ignore="MissingTranslation">Graphic Novel</string>
    <string name="historical_fiction" tools:ignore="MissingTranslation">Historical Fiction</string>
    <string name="history" tools:ignore="MissingTranslation">History</string>
    <string name="horror" tools:ignore="MissingTranslation">Horror</string>
    <string name="journalism" tools:ignore="MissingTranslation">Journalism</string>
    <string name="literary_fiction" tools:ignore="MissingTranslation">Literary Fiction</string>
    <string name="memoir" tools:ignore="MissingTranslation">Memoir</string>
    <string name="poetry" tools:ignore="MissingTranslation">Poetry</string>
    <string name="prayer" tools:ignore="MissingTranslation">Prayer</string>
    <string name="religion" tools:ignore="MissingTranslation">Religion</string>
    <string name="romance" tools:ignore="MissingTranslation">Romance</string>
    <string name="science_fiction" tools:ignore="MissingTranslation">Science Fiction</string>
    <string name="self_help" tools:ignore="MissingTranslation">Self-Help</string>
    <string name="short_story" tools:ignore="MissingTranslation">Short Story</string>
    <string name="suspense_and_thriller" tools:ignore="MissingTranslation">Suspense &amp; Thriller</string>
    <string name="textbook" tools:ignore="MissingTranslation">Textbook</string>
    <string name="travel" tools:ignore="MissingTranslation">Travel</string>
    <string name="true_crime" tools:ignore="MissingTranslation">True Crime</string>
    <string name="womens_fiction" tools:ignore="MissingTranslation">Women\&apos;s Fiction</string>

    <!-- Book format array -->
    <string name="paperback" tools:ignore="MissingTranslation">Paperback</string>
    <string name="hardcover" tools:ignore="MissingTranslation">Hardcover</string>
    <string name="leather_bound" tools:ignore="MissingTranslation">Leather-Bound</string>
    <string name="ebook" tools:ignore="MissingTranslation">eBook</string>
    <string name="audiobook" tools:ignore="MissingTranslation">Audiobook</string>
    <string name="compact_disk" tools:ignore="MissingTranslation">Compact-Disk</string>
    <string name="non_traditional" tools:ignore="MissingTranslation">Non-Traditional</string>

    <!-- Miscellaneous strings -->
    <string name="app_name" translatable="false">Grapevine</string>
    <string name="open_single_quotation_mark">\'</string>
    <string name="close_single_quotation_mark">\'</string>
    <string name="question_mark">\?</string>
    <string name="title_reads">Reads</string>
    <string name="title_search">Search</string>
    <string name="title_bookshops">Bookshops</string>
    <string name="title_conversation">Conversation</string>
    <string name="search_your_books">Search your books</string>
    <string name="search_by_title_author_or_ISBN">Search by title, author or ISBN</string>
    <string name="group">Group</string>
    <string name="sort">Sort</string>
    <string name="add_book">Add book</string>
    <string name="edit_book">Edit book</string>
    <string name="search_shops">Search shops</string>
    <string name="post">Post</string>
    <string name="book_cover">Book cover</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="enter_ISBN" tools:ignore="MissingTranslation">Enter ISBN</string>
    <string name="enter_title" tools:ignore="MissingTranslation">Enter title</string>
    <string name="enter_authors" tools:ignore="MissingTranslation">Enter author(s)</string>
    <string name="enter_genre" tools:ignore="MissingTranslation">Enter genre</string>
    <string name="enter_publisher" tools:ignore="MissingTranslation">Enter publisher</string>
    <string name="enter_publish_date" tools:ignore="MissingTranslation">Enter publish date</string>
    <string name="enter_summary" tools:ignore="MissingTranslation">Enter summary</string>
    <string name="enter_language" tools:ignore="MissingTranslation">Enter language</string>
    <string name="select_format" tools:ignore="MissingTranslation">Select format</string>
    <string name="enter_pages" tools:ignore="MissingTranslation">Enter pages</string>
    <string name="write_summary" tools:ignore="MissingTranslation">Write summary</string>
    <string name="please_enter_valid_ISBN">Please enter valid ISBN</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="optional">(Optional)</string>
    <string name="lc_was_saved_to">" was saved to"</string>
    <string name="lc_was_removed_from">" was removed from"</string>
    <string name="lc_was_updated">" was updated"</string>
    <string name="lc_could_not_be_saved">" could not be saved"</string>
    <string name="lc_your_library">" your library"</string>
    <string name="read_condition">Read</string>
    <string name="reading_condition">Reading</string>
    <string name="not_read_condition">Not read</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="finish">Finish</string>
    <string name="summary">Summary</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="discard_book">Discard book</string>
    <string name="discard_changes">Discard changes</string>
    <string name="book_discarded">Book discarded</string>
    <string name="select_publish_date">Select publish date</string>
    <string name="remove_book">Remove book</string>
    <string name="are_you_sure_you_want_to_remove">"Are you sure you want to remove "</string>
    <string name="pages" tools:ignore="MissingTranslation">Pages</string>
    <string name="format" tools:ignore="MissingTranslation">Format</string>
    <string name="language" tools:ignore="MissingTranslation">Language</string>
    <string name="publish_date" tools:ignore="MissingTranslation">Publish Date</string>
    <string name="progress">Progress</string>
    <string name="uc_n_a" tools:ignore="MissingTranslation">N/A</string>
    <string name="user_profile" tools:ignore="MissingTranslation">User profile</string>

</resources>