<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookPublisher"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:minHeight="48dp"
            android:scrollHorizontally="true"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bookPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:minHeight="12dp"
            android:minLines="1"
            android:text="@string/publisher"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookTitle"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/bookGenre"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:maxLines="1"
            android:minHeight="24dp"
            android:scrollHorizontally="true"
            android:text="@string/author"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/bookGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bookAuthor"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:minHeight="24dp"
            android:minLines="1"
            android:text="@string/genre"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>