<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/readsCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:checkable="true"
    app:checkedIcon="@null"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:background="@android:color/white"
            android:contentDescription="@string/book_cover"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/kenya_square" />

        <TextView
            android:id="@+id/bookPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_toEndOf="@+id/bookCover"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:maxLines="1"
            android:minHeight="12dp"
            android:text="@string/publisher"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookPublisher"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/bookCover"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:minHeight="48dp"
            android:scrollHorizontally="true"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookTitle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/bookGenre"
            android:layout_toEndOf="@+id/bookCover"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:maxLines="1"
            android:minHeight="24dp"
            android:scrollHorizontally="true"
            android:text="@string/author"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/bookGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bookAuthor"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:maxLines="1"
            android:minHeight="24dp"
            android:text="@string/genre"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <ProgressBar
            android:id="@+id/bookProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookAuthor"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/bookCover"
            android:fadingEdge="horizontal|vertical"
            android:foregroundGravity="bottom" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>