<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manualAddBookScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".ManualAddBookActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutISBN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_ISBN"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_title"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutISBN">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences|textCapWords"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAuthors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_authors"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAuthors">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_genre"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPublisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGenre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_publisher"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDatePublished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPublisher">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterPublishDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_publish_date"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDatePublished">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_language"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxBackgroundColor="@color/colorTextInputLayout"
            app:helperText="@string/optional"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLanguage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEnterPages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pages"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>