<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/bookDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        tools:context=".BookDetailActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/bookDetailCoverLarge"
                    android:layout_width="0dp"
                    android:layout_height="224dp"
                    android:background="@android:color/white"
                    android:contentDescription="@string/book_cover"
                    android:scaleType="centerCrop"
                    android:tint="#66000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/kenya_square" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/bookDetailCover"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="62dp"
                    android:background="@android:color/white"
                    android:contentDescription="@string/book_cover"
                    android:elevation="4dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/kenya_square" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bookDetailGenre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_light_italic"
                    android:gravity="bottom"
                    android:maxLines="1"
                    android:minHeight="24dp"
                    android:scrollHorizontally="true"
                    android:text="@string/genre"
                    android:textAlignment="gravity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/bookDetailCover"
                    app:layout_constraintTop_toTopOf="@+id/bookDetailCover" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bookDetailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:minHeight="53dp"
                    android:scrollHorizontally="true"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/bookDetailCoverLarge"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/bookDetailCover"
                    app:layout_constraintTop_toBottomOf="@+id/bookDetailGenre" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bookDetailAuthors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom"
                    android:maxLines="1"
                    android:minHeight="24dp"
                    android:scrollHorizontally="true"
                    android:text="@string/author"
                    android:textAlignment="gravity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/bookDetailCover"
                    app:layout_constraintTop_toBottomOf="@+id/bookDetailTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/bookDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_outline_arrow_back_white"
                app:title=" " />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>